--- a/index.css
+++ b/index.css
@@ -1,4 +1,3 @@
-
 * {
     margin: 0;
     padding: 0;
@@ -49,6 +48,11 @@ body {
     width: 60px;
     height: 60px;
     cursor: pointer;
+    transition: transform 0.3s ease;
+}
+
+.search button:hover {
+    transform: translateY(-5px);
 }
 
 .search button img{
@@ -110,4 +114,45 @@ body {
     border-radius: 5px;
     box-shadow: 0 2px 4px rgba(0, 0, 0, 0.2);
     display: none;
+    transition: transform 0.3s ease;
+    position: relative; /* Ensure the popup is positioned relative to the error div */
+}
+
+.error:hover {
+    transform: translateY(-5px);
+    cursor: not-allowed;
+}
+
+.popup .popupText {
+    visibility: hidden;
+    width: 160px;
+    background-color: #555;
+    color: #fff;
+    text-align: center;
+    border-radius: 6px;
+    padding: 8px 0;
+    position: absolute;
+    z-index: 1;
+    bottom: 125%;
+    left: 50%;
+    margin-left: -80px;
+    opacity: 0;
+    transition: opacity 0.3s;
+}
+
+.error:hover .popupText {
+    visibility: visible;
+    opacity: 1;
+    -webkit-animation: fadeIn 1s;
+    animation: fadeIn 1s;
+}
+
+@-webkit-keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity: 1;}
+}
+
+@keyframes fadeIn {
+    from {opacity: 0;}
+    to {opacity:1 ;}
 }
